# physlab

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  NOTICE  README.md  RUNBOOK.md  biome.json  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  plugin-question.yml
.github/workflows/: ci.yml  cold-start.yml  docs.yml  licenses.yml  release.yml
.sisyphus/evidence/: anchor-demo-recording.cast  cold-start-baseline-m5pro.txt  phase-0-assessment.md  phase-0-assessment.template.md  task-1-phase0-bad-name.txt  task-1-phase0-happy.txt  task-10-mcp-invalid.json  task-10-mcp-tests.txt  task-10-mcp-tools-list.json  task-11-mcp-cycle.txt  task-11-mcp-stale-handle.json  task-11-mcp-tests.txt  task-12-slice-cli.txt  task-12-slice-kill.txt  task-12-slice-mcp.txt  task-12-slice-tests.txt  task-13-franka-no-asset.txt  task-13-franka-random.txt  task-13-franka-tests.txt  task-14-ppo-bad-task.txt  task-14-ppo-cartpole.txt  task-14-ppo-determinism.txt  task-14-ppo-tests.txt  task-15-llm-cache.txt  task-15-llm-no-opencode.txt  task-15-llm-probe.txt  task-15-llm-tests.txt  task-16-orchestrator-3iter.txt  task-16-orchestrator-resume-bad.txt  task-16-orchestrator-tests.txt  task-17-reward-gen-forbidden.txt  task-17-reward-gen-tests.txt  task-18-eval-baseline.txt  task-18-eval-nan.txt  task-18-eval-timeout.txt  task-18-evaluator-tests.txt  task-19-controller-abort.txt  task-19-controller-improving.txt  task-19-controller-tests.txt  task-2-scaffold-corrupt.txt  (+78 more)
.sisyphus/evidence/task-16-orchestrator-3iter/: config.json  llm.jsonl  manifest.jsonl
.sisyphus/evidence/task-20-anchor-smoke/: BEST_REWARD.py  SUMMARY.md  config.json  manifest.jsonl
.sisyphus/evidence/task-21-feas-gate-1/: config.json
.sisyphus/plans/: handoff-codex-goal.md  mac-physical-ai-lab.md
docs/: conf.py  extension-points.md  getting-started.md  index.md  roadmap.md  tutorial-eureka-franka.md
docs/api/: index.md  python.md  typescript.md
examples/: README.md  __init__.py  eureka_franka.py  hello_cartpole.py  hello_cartpole_via_mcp.ts
examples/anchor_demo_cache/seed42/: manifest.json  reflection_4.md.txt  reward_0.py.txt  reward_1.py.txt  reward_2.py.txt  reward_3.py.txt  reward_4.py.txt
examples/fixtures/: eureka_franka_seed42_mock_llm.json
examples/plugins/: README.md
examples/plugins/hello_task/: README.md  hello_task.py  pyproject.toml
mcp-server/: README.md  package.json  tsconfig.build.json  tsconfig.json  typedoc.json
mcp-server/scripts/: fix-dts.mjs
mcp-server/src/: server.ts  worker.ts
mcp-server/src/tools/: sim.ts
mcp-server/tests/: protocol_compliance.test.ts  server.test.ts  sim_tools.test.ts
runs/anchor-v0.1-canonical/: BEST_REWARD.py  SUMMARY.md  config.json  manifest.jsonl
runs/anchor-v0.1-canonical/iter_0/: eval.json  prompt.md  reflection.md  reward.py
runs/anchor-v0.1-canonical/iter_1/: eval.json  prompt.md  reflection.md  reward.py
runs/anchor-v0.1-canonical/iter_2/: eval.json  prompt.md  reflection.md  (+1 more)
runs/task-14-ppo-cartpole/: train.jsonl
scripts/: cold_start_bench.sh  release.sh
src/physlab/: __init__.py  env.py  mcp_worker.py  protocols.py  registry.py
tests/: conftest.py
tests/fixtures/: all_failures.json  gpl_violator.json  improving_rewards.json  pendulum.xml  tutorial_backend.py
tests/integration/: test_agent_freedom.py  test_backend_contract.py  test_cartpole.py  test_eureka_franka_smoke.py  test_evaluator.py  test_extension_freedom.py  test_extension_points.py  test_franka_pick.py  test_franka_push.py  test_locomotion.py  test_mujoco_contract.py  test_readme_snippets.py  test_release_workflow.py  test_research_freedom.py  test_vertical_slice.py  test_workflow_freedom.py
tests/unit/: test_controller.py  test_env.py  test_hardware_matrix_check.py  test_license_check.py  test_llm_client.py  test_mock_backend.py  test_mujoco_backend.py  test_orchestrator.py  test_phase_0_tools.py  test_ppo.py  test_protocols.py  test_registry.py  test_release_readiness.py  test_reward_gen.py
tools/: __init__.py  capture_phase_0_evidence.sh  check_hardware_matrix.py  check_licenses.py  check_release_readiness.py  gen_schemas.py  validate_phase_0.py  write_phase_0_assessment.py
(+51 files in other folders)
