[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "physlab"
version = "0.0.0"
description = "Mac-native physical AI lab scaffold for local MuJoCo and agent workflows."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Jhin" }]
keywords = ["mujoco", "robotics", "physical-ai", "macos"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "mujoco>=3.2,<4",
  "numpy>=1.26",
  "torch>=2.3",
]

[project.scripts]
physlab-hello = "examples.hello_cartpole:main"

[project.optional-dependencies]
dev = [
  "mypy>=1.18",
  "pip-licenses>=5.0",
  "pre-commit>=4.0",
  "pytest>=8.0",
  "pytest-cov>=7.0",
  "ruff>=0.14",
]
test = [
  "pytest>=8.0",
  "pytest-cov>=7.0",
]
docs = [
  "pdoc>=15.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["src/physlab", "examples"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "mcp-server/node_modules"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests", "tools"]
exclude = ["\\.venv/", "mcp-server/node_modules/"]

[[tool.mypy.overrides]]
module = ["mujoco"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
markers = [
  "slow: extended RL convergence checks",
]
